<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" android:layout_weight="1">
  <LinearLayout android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" android:padding="5dp">
      <EditText android:id="@+id/tagEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_tag"
         android:inputType="textPersonName|textCapWords"></EditText>
      <EditText android:id="@+id/batteryStartEditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_start" 
         android:inputType="numberDecimal"></EditText>
      <EditText android:id="@+id/batteryEndEditText"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_end"
         android:inputType="numberDecimal"></EditText>
      <EditText android:id="@+id/durationEditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_duration"
         android:inputType="numberDecimal"></EditText>
      <EditText android:id="@+id/dateEditText"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:imeOptions="actionNext" android:hint="@string/hint_year"
          android:inputType="date"></EditText>
      <EditText android:id="@+id/descriptionEditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionDone" android:hint="@string/hint_description"
         android:inputType="text"></EditText>
      <Button android:id="@+id/saveLogButton" 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/button_save_log"></Button>
   </LinearLayout>
</ScrollView>